added about me text

--- a/index.html
+++ b/index.html
@@ -12,8 +12,28 @@
 <body>
     <!-- This is the start of the "About" section -->
     <div class="About Corbin">
-        <h1>About</h1>
+        <h1>Corbin L. Kling, Ph.D.</h1>
         <p>geologist/ planetary scientist/drone pilot/RC Enthusiast</p>
+        <h2>About</h2>
+        <p> Hi, my name is Corbin Kling, I am studying structural geology with an emphasis in planetary science. 
+            My masters work was focused on investigating large thrust faults on Mars and if they could inform us more 
+            about the subsurface crustal properties. My Ph.D. work has been focused on how pit craters form on Earth, Mars, 
+            and any planetary surface that host these enigmatic sinkhole-like geomorphological features. </p>
+
+        <p> My most recent work has included:</p>
+            <ol>
+            <li> Using drone data to estimate short-timescale movement of dunes. tracking dune movement with drones is a much improved
+                method to previously used differential GPS surveys. Coupling drone data with novel point cloud comparision techniques 
+                allows for accuracte estimation of dune movement without the need for time sconsuming ground control point surveys 
+                conveintionally used in drone data processing. The field sites for dune tracking aare located in the Simpson Desert, 
+                Australia.</li>
+            <li> A large mapping project studying how pit craters influenced the formation Noctis Labyrinthus, Mars. I have mapped 
+                all normal faults, impact craters, and pit craters within Noctis Labyrnithus, Mars. Additionally I have found abundant 
+                evidence for periglacial processes post emplacement of the pit craters indicating some large volatile reservoir 
+                was present within the subsurface.</li>
+            <li> Three field campaigns to look at pit craters on Earth; Hawaii Volcanoes National Park , Craters of the Moon National 
+                Monument and Preserve, and Canyonlands National Park. This wowrk was to supplememtn observations of pit craters made 
+                on other planets, including at Noctis Labyrinthus, Mars, Nyx Mons, Venus, and numerous small satellites.</li>
     </div>
 
     <!-- This is the start of the projects section -->
