--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     <div class="project-content">
         <h3>Sample Project</h3>
         <p>This is a cool project that does things</p>
+        <a href="https://example.com"><button>Project Link</button></a>
     </div>
 </div>
