--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- This is the start of the "About" section -->
-    <div class="About Corbin">
+    <div class="About">
         <h1>Corbin L. Kling, Ph.D.</h1>
         <p>geologist/ planetary scientist/drone pilot/RC Enthusiast</p>
         <h2>About</h2>
