--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>Corbin L. Kling, Ph.D.</h1>
         <p>geologist/ planetary scientist/drone pilot/RC Enthusiast</p>
         <h2>About</h2>
+        <div class-"about-content">
         <p> Hi, my name is Corbin Kling, I am studying structural geology with an emphasis in planetary science. 
             My masters work was focused on investigating large thrust faults on Mars and if they could inform us more 
             about the subsurface crustal properties. My Ph.D. work has been focused on how pit craters form on Earth, Mars, 
@@ -34,6 +35,7 @@
             <li> Three field campaigns to look at pit craters on Earth; Hawaii Volcanoes National Park , Craters of the Moon National 
                 Monument and Preserve, and Canyonlands National Park. This wowrk was to supplememtn observations of pit craters made 
                 on other planets, including at Noctis Labyrinthus, Mars, Nyx Mons, Venus, and numerous small satellites.</li>
+                </div>
     </div>
 
     <!-- This is the start of the projects section -->
