--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Corbin L. Kling, Ph.D.</h1>
         <p>geologist/ planetary scientist/drone pilot/RC Enthusiast</p>
         <h2>About</h2>
-        <div class-"about-content">
+        <div class="about-content">
         <p> Hi, my name is Corbin Kling, I am studying structural geology with an emphasis in planetary science. 
             My masters work was focused on investigating large thrust faults on Mars and if they could inform us more 
             about the subsurface crustal properties. My Ph.D. work has been focused on how pit craters form on Earth, Mars, 
