--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     
     <!-- This div contains the project information -->
     <div class="project-content">
-        <h3>Sample Project</h3>
-        <p>This is a cool project that does things</p>
-        <a href="https://example.com"><button>Project Link</button></a>
+        <h3>Australia Linear Dunes</h3>
+        <p>Tracking Dunes with Drones</p>
+        <a href="dunes"><button>Project Link</button></a>
     </div>
 </div>
