--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
     <!-- This div contains the project information -->
     <div class="project-content">
-        <h3>Australia Linear Dunes</h3>
+        <h3>Australia Linear Duneszzz</h3>
         <p>Tracking Dunes with Drones</p>
         <a href="dunes"><button>Project Link</button></a>
     </div>
