--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </body>
 <div class="project">
     <!-- This is the project image -->
-    <img class="project-thumbnail" src="Photos for Website/DSC03097.jpg">
+    <img class="project-thumbnail" src="images/ausCarsFar.jpg">
     
     <!-- This div contains the project information -->
     <div class="project-content">
