--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 </body>
 <div class="project">
     <!-- This is the project image -->
-    <img class="project-thumbnail" src="images/ausCarsFar.jpg">
+    <img class="project-thumbnail" src="images/ausCarsFar.JPG">
     
     <!-- This div contains the project information -->
     <div class="project-content">
         <h3>Australia Linear Dunes</h3>
         <p>Tracking Dunes with Drones</p>
-        <a href="dunes"><button>Project Link</button></a>
+        <a href="dunes"><button>Show me the Dunes!</button></a>
     </div>
 </div>
