--- a/dunes.html
+++ b/dunes.html
@@ -1,1 +1,16 @@
+<body>
+    <!-- This is the start of the "About" section -->
+    <div class="About">
+        <h1>Linear Dunes in the Simpson Desert, Australia</h1>
+        <p>utilizing drones to track short-timescale movement of the large linear sand dunes that traverse the simpson desert</p>
+        <h2>The Method</h2>
+        <div class="about-content">
+        <p> drones being used this way </p>
 
+        <p> examples of results</p>
+            <ol>
+            <li> Madigan Camp 11</li>
+            <li> Jockey's Ridge</li>
+            <li> Other dunes of interest</li>
+                </div>
+    </div>
