--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <h3>Australia Linear Dunes</h3>
         <p>Tracking Dunes with Drones</p>
         <a href="dunes"><button>Show me the Dunes!</button></a>
-        
+    </div>
+</div>
+<div class="projects">
     <img class="project-thumbnail" src="images/SanYsidro.JPG">
         
     <div class="project-content">
