--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 </div>
 <div class="projects">
-    <img class="project-thumbnail" src="images/SanYsidro.JPG">
+    <img class="project-thumbnail" src="images/SanYsidro.jpg">
         
     <div class="project-content">
         <h3>3d terrain models</h3>
