--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     <div class="project-content">
         <h3>3d terrain models</h3>
         <p>tasty viewing of 3d mdoels</p>
-        <a href="dunes"><button>Show me the Models!</button></a>
+        <a href="models"><button>Show me the Models!</button></a>
     </div>
 </div>
