--- a/models.html
+++ b/models.html
@@ -1,6 +1,10 @@
+<hmtl>
+  <body>
 <!-- Import the component -->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 <!-- Use it like any other HTML element -->
 <model-viewer alt="cedar hills disc golf course" 
               src="images/cedar2.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls></model-viewer>
+  </body>
+  </html>
