--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <ol>
             <li> Using drone data to estimate short-timescale movement of dunes. tracking dune movement with drones is a much improved
                 method to previously used differential GPS surveys. Coupling drone data with novel point cloud comparision techniques 
-                allows for accuracte estimation of dune movement without the need for time sconsuming ground control point surveys 
-                conveintionally used in drone data processing. The field sites for dune tracking aare located in the Simpson Desert, 
-                Australia.</li>
+                allows for accuracte estimation of dune movement without the need for time consuming ground control point surveys 
+                conventionally used in drone data processing. The field sites for dune tracking are located in the Simpson Desert, 
+                Australia, and the San Rafael Desert in Utah.</li>
             <li> A large mapping project studying how pit craters influenced the formation Noctis Labyrinthus, Mars. I have mapped 
                 all normal faults, impact craters, and pit craters within Noctis Labyrnithus, Mars. Additionally I have found abundant 
                 evidence for periglacial processes post emplacement of the pit craters indicating some large volatile reservoir 
