--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 conventionally used in drone data processing. The field sites for dune tracking are located in the Simpson Desert, 
                 Australia, and the San Rafael Desert in Utah.</li>
             <li> A large mapping project studying how pit craters influenced the formation Noctis Labyrinthus, Mars. I have mapped 
-                all normal faults, impact craters, and pit craters within Noctis Labyrnithus, Mars. Additionally I have found abundant 
+                all normal faults, impact craters, and pit craters within Noctis Labyrinthus, Mars. Additionally I have found abundant 
                 evidence for periglacial processes post emplacement of the pit craters indicating some large volatile reservoir 
                 was present within the subsurface.</li>
             <li> Three field campaigns to look at pit craters on Earth; Hawaii Volcanoes National Park , Craters of the Moon National 
