--- a/models.html
+++ b/models.html
@@ -5,6 +5,6 @@
 
 <!-- Use it like any other HTML element -->
 <model-viewer alt="cedar hills disc golf course" 
-              src="images/cedar2.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls></model-viewer>
+              src="images/cedar2.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
   </body>
   </html>
