--- a/models.html
+++ b/models.html
@@ -1,5 +1,11 @@
 <hmtl>
   <body>
+  <style>
+    model-viewer {
+      width: 400px;
+      height: 400px;
+    }
+    </style>
 <!-- Import the component -->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
